# jetson-ros-autonomous

./: .gitmodules  .vimrc  README.md  gmapping-sim.launch  gmapping.launch  jetson-setup.sh  odom.launch
differential-drive/: setup.py
differential-drive/scripts/: diff_tf.py  pid_velocity.py  (+1 more)
gbot/: CMakeLists.txt  costmap_common_params.yaml  mymap.pgm  mymap.yaml  package.xml  robot_localization.launch  robot_pose.launch  setup.py
gbot/assets/: rising_sun.mpg
gbot/launch/: amcl_diff.launch  backend.launch  camera.launch  differential-drive.launch  display.launch  dnn_detect.launch  drive.launch  driver_node.launch  gmapping-core.launch  gmapping-live.launch  gmapping-sim.launch  gmapping.launch  imu.launch  lidar.launch  localization.launch  manual-drive.launch  map-environ.launch  nav.launch  navigate_map.launch  odom.launch  robot.launch  rs_camera.launch  rtabmap.launch  rtabmap_config.ini  rviz.launch  sensors.launch  sim_autopilot.launch  sim_gmapping.launch  tensorflow_detect.launch  webcam.launch
gbot/msg/: Proximity.msg  RobotCmd.msg
gbot/rviz/: live-mapping.rviz  nav.rviz
gbot/src/: arduino_driver.py  auto_pilot.py  camera_servo_control.py  controller.py  dimension_driver.py  display.py  distance_scanner.py  driver.py  driver_node.py  encoder.py  laser_scan_processor.py  manual_pilot.py  moverobot.py  odom.py  odom_from_tf.py  process_detected_objects.py  robot_pilot.py  robot_state.py  run.py  servo.py  servo_node.py  sharp_scanner.py  speed_tracker.py  track_encoders.py  track_imu.py  track_pose.py  track_vertical_pose.py  ultrasonic_scanner.py
(+13 files in other folders)
